@@ -1,14 +1,11 @@
 package com.social.Config;
 
-import jakarta.servlet.http.HttpServletRequest;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
-import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configuration.WebSecurityCustomizer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
@@ -18,8 +15,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -31,71 +27,65 @@ public class AppConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
 
-        http.sessionManagement(management -> management.sessionCreationPolicy(
-                SessionCreationPolicy.STATELESS));
+        http
+                .sessionManagement(management ->
+                        management.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
 
-        // 1. Apply CORS configuration first
-        http.cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+
                 .csrf(csrf -> csrf.disable())
-                .authorizeHttpRequests(authorize -> authorize
-                        // 2. Allow all Preflight (OPTIONS) requests immediately
+
+                .authorizeHttpRequests(auth -> auth
+
                         .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
 
-                        // 3. Public Endpoints (No Token Required)
-                        .requestMatchers("/auth/**", "/api/auth/**").permitAll()
-                        .requestMatchers("/ws/**").permitAll()
-                        .requestMatchers("/api/ai/**").permitAll() // AI Caption Feature
+                        .requestMatchers(
+                                "/auth/**",
+                                "/api/auth/**",
+                                "/ws/**",
+                                "/api/ai/**"
+                        ).permitAll()
 
-                        // 4. Protected Endpoints (Token Required)
                         .requestMatchers("/api/**").authenticated()
 
-                        .anyRequest().permitAll())
-                // 5. Add JWT Validator before basic authentication
+                        .anyRequest().permitAll()
+                )
+
                 .addFilterBefore(jwtValidator, BasicAuthenticationFilter.class);
 
         return http.build();
     }
 
     @Bean
-    public WebSecurityCustomizer webSecurityCustomizer() {
-        return (web) -> web.ignoring().requestMatchers("/ws/**");
-    }
-
-    @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration cfg = new CorsConfiguration();
 
-        // Specific allowed origins (Vercel + Localhost)
-        cfg.setAllowedOrigins(Arrays.asList(
+        CorsConfiguration configuration = new CorsConfiguration();
+
+        configuration.setAllowedOrigins(List.of(
                 "http://localhost:3000",
-                "https://social-app-frontend-silk.vercel.app/"
+                "https://social-app-frontend-silk.vercel.app"
         ));
 
-        // Allowed Patterns for preview/branch deployments
-        cfg.setAllowedOriginPatterns(Collections.singletonList("https://*.vercel.app"));
-
-        cfg.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        cfg.setAllowCredentials(true);
-
-        // Explicitly list headers to satisfy Vercel's Edge Network
-        cfg.setAllowedHeaders(Arrays.asList(
-                "Authorization",
-                "Content-Type",
-                "X-Requested-With",
-                "Accept",
-                "Origin",
-                "Access-Control-Request-Method",
-                "Access-Control-Request-Headers"
+        configuration.setAllowedMethods(List.of(
+                "GET",
+                "POST",
+                "PUT",
+                "DELETE",
+                "OPTIONS",
+                "PATCH"
         ));
 
-        // Allow Axios to read the Authorization header from responses
-        cfg.setExposedHeaders(Collections.singletonList("Authorization"));
+        configuration.setAllowedHeaders(List.of("*"));
 
-        // Cache the Preflight response for 1 hour (reduces server load)
-        cfg.setMaxAge(3600L);
+        configuration.setExposedHeaders(List.of("Authorization"));
 
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", cfg);
+        configuration.setAllowCredentials(true);
+
+        UrlBasedCorsConfigurationSource source =
+                new UrlBasedCorsConfigurationSource();
+
+        source.registerCorsConfiguration("/**", configuration);
+
         return source;
     }
 
